tests/valid/do/v10_do_step.f
program dostep
  integer i
  do 10 i = 1, 10, 2
    print *, i
10 continue
end
