tests/invalid/expressions/i23_concat_noncharacter.f
program badconcat
  integer i
  character*4 a
  i = 1
  a = 'ola' // i
  print *, a
end
